[package]
name = "pinocchio-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
pinocchio-token-2022 = "0.1.0"
shank = "0.4.6"
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
litesvm = "0.6.1"
#Features: hashbrown, internal-test,  nodejs-internal, precompiles, serde
litesvm-token = "0.6.1"
#solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-kite = "0.1.0"
solana-pubkey = "2.2.1"
#Features: token-2022
solana-sdk = "3.0.0"
solana-signer = "2.2.1"
#Features: dev-context-only-utils, frozen-abi
#solana-transaction = "2.2.1"
#solana-system-program = "2.2.1"
#solana-program = "2.2.1"
solana-system-interface = "3.0.0"
#Features: alloc, bincode, frozen-abi, serde, std
#spl-associated-token-account = "6.0.0"
#spl-token = "7.0.0"
